# polyglot

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN_TOKENS.json  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  renovate.json  tailwind.config.js
.omo/run-continuation/: ses_108080c71fferjR9g7U5NCUSDG.json  ses_1080816beffeGB348JBmCA36tN.json  ses_1080deb27ffeIleuQgnbJWNRBT.json  ses_1080e1057ffeLQpgis7gjgSY8S.json  ses_1080e16dcffejDyikSbg0yXeST.json  ses_1080e35f0ffeDxL2aUDpf5emzp.json  ses_1080e3b6dffexIwthQ2me7UGMM.json  ses_1080e42c9ffe6gVfWweiVvwQyr.json  ses_1080e4e37ffezeGjRzvGA29zue.json  ses_1080e5bf6ffeOSKWLlt5BuAf0e.json  ses_1080e6496ffeafg6yp8gIEtDJR.json  ses_1080e81bdffeWtmY5920HRJJ0W.json  ses_1080e8815fferzo2v8YIpyHcKS.json  ses_1080eae95ffesdHYaPXQzpLs8G.json  ses_1080eb494ffeFnuFWC7DJfevJM.json  ses_1080ed490ffe2cq7Kc7R31YjX5.json  ses_1083facceffeFQw4rsuyYSKMCm.json
alembic/: env.py
alembic/versions/: 193dce9455ca_add_support_ticket_tables.py  f8a2c1d4e9b3_add_file_record_key.py
app/: main.py
app/api/: __init__.py  admin.py  auth.py  deps.py  public.py  sse.py  system.py  ticket_attachments.py  ticket_routes.py
app/core/: auth.py  config.py  context.py  db.py  errors.py  logging.py  saml.py  security.py  tasks.py  templates.py
app/models/: __init__.py  app_setting.py  audit_log.py  auth_session.py  (+10 more)
docs/: ADMIN.md  AGENTS.md  DECISIONS.md  DESIGN.md  OPERATIONS.md  PRD.example.md  PRD.support-tickets.md  PRD.timekeeping.md  SECURITY.md
docs-src/: mkdocs.yml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: activate_component.sh  check_config.sh  check_deps.py  generate_tokens.py  seed_dev.py  smoke_test.sh  verify_tasks.py
tests/: conftest.py
(+221 files in other folders)
