[project]
name = "polyglot"
version = "0.1.0"
description = "AI-native secure application boilerplate"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<3",
    "authlib>=1.4,<2",
    "httpx>=0.28,<1",
    "itsdangerous>=2.2,<3",
    "jinja2>=3.1,<4",
    "aiofiles>=24.1,<25",
    "structlog>=24.4,<25",
    "procrastinate>=2.6,<3",
    "aiosqlite>=0.20,<1",
    "python-multipart>=0.0,<1",
    "cryptography>=48.0.1,<49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6.0,<7",
    "httpx>=0.28,<1",
    "ruff>=0.9,<1",
    "basedpyright>=1.28,<2",
    "factory-boy>=3.3,<4",
    "respx>=0.22,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "scripts*", "boilerplate*", "frontend*"]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "ARG", "PYI"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002", "B008"]
"app/api/*" = ["ARG001", "B008"]
"app/core/middleware/*" = ["B008"]
"app/components/**" = ["ARG001", "ARG002", "B008", "E501", "UP017"]
"boilerplate/**" = ["ARG001", "ARG002", "B008", "E501", "UP017", "B904", "SIM110"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that need a database",
    "e2e: marks end-to-end tests",
]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["app", "tests"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
